Updated app.js to include the 0 switch case for the 'sunday' to be included when setting the dates of the cards. Also changed the search button border-radius

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ padding-right: 10px;
     vertical-align: top;
     cursor: pointer;
     transition: 0.2s all ease-in;
-    border-radius: 8%;
+    border-radius: 12px;
 }
 
 .btn_submit_search:hover {
